fixed overflow on kanban

--- a/src/Pages/Dashboard/SubRoutes/Project/Components/Kanban/Kanban.css
+++ b/src/Pages/Dashboard/SubRoutes/Project/Components/Kanban/Kanban.css
@@ -21,7 +21,7 @@
   font-size: 25px;
 }
 .section_content .kanban_contain .kanban .column {
-  /* overflow-y: scroll; */
+  overflow-y: hidden;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -49,8 +49,8 @@
 }
 .section_content .kanban_contain .kanban .column .card_holder {
   box-sizing: border-box;
-  /* overflow-y: scroll; */
-  overflow: auto;
+  overflow-y: auto;
+  /* overflow: auto; */
   /* min-height: 100%; */
   /* max-height: 100%; */
   height: 100%;
